[package]
name = "tracing-opentelemetry"
version = "0.5.0"
authors = [
    "Julian Tescher <julian@tescher.me>",
    "Tokio Contributors <team@tokio.rs>"
]
description = "OpenTelemetry integration for tracing"
homepage = "https://github.com/tokio-rs/tracing/tree/master/tracing-opentelemetry"
repository = "https://github.com/tokio-rs/tracing"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["tracing", "opentelemetry", "jaeger", "zipkin", "async"]
license = "MIT"
edition = "2018"

[features]
default = ["tracing-log"]

[dependencies]
opentelemetry = { version = "0.6", default-features = false, features = ["trace"] }
rand = "0.7"

tracing = { version = "0.1.14" }
tracing-subscriber = { version = "0.2.5" }
tracing-core = "*"
tracing-log = { version = "0.1.1", optional = true}

[dev-dependencies]
opentelemetry-jaeger = "0.5"
